k8s/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: stackbridge-lab
  labels:
    project: stackbridge-devops-dashboard
    owner: ganesh
    purpose: devops-lab
