k8s/frontend-deployment.yaml
  kind: Deployment
  apiVersion: apps/v1
  metadata:
    name: frontend
    namespace: stackbridge-lab
    labels:
      app: frontend
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: frontend
    template:
      metadata:
        labels:
          app: frontend
      spec:
        containers:
          - name: frontend
            image: ganesha7/stackbridge-frontend:latest
            ports:
              - containerPort: 80
            resources:
              requests:
                cpu: "100m"
                memory: "128Mi"
