k8s/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: stackbridge-lab
  labels:
    app: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 32001
