k8s/db-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: stackbridge-lab
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
