k8s/frontend-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-nodeport
  namespace: stackbridge-lab
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32000
  type: NodePort
