k8s/stackbridge-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: stackbridge-ingress
  namespace: stackbridge-lab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
